[package]
name = "calendar-sidecar"
version = "0.1.0"
edition = "2024"

[lib]
name = "calendar_sidecar"
path = "src/lib.rs"

[[bin]]
name = "calendar-sidecar"
path = "src/main.rs"

[dependencies]
vzglyd_sidecar = { package = "VRX-64-sidecar", git = "https://github.com/vzglyd/VRX-64-sidecar" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
